# kepler-formal

./: CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml  macOS.yml  regress.yml
.reuse/: dep5
bench/tinyrocket_naja.if/: db_implementation.snl  snl.mf
example/: README.md  edit3.py  edit4.py
example/tinyrocket_naja_edited3.if/: db_implementation.snl  snl.mf
example/tinyrocket_naja_edited4.if/: db_implementation.snl  snl.mf
src/: CMakeLists.txt
src/clauses/: CMakeLists.txt  NajaClause.cpp  NajaClause.h  SNLLogicCloud.cpp  SNLLogicCloud.h  SNLTruthTable2BoolExpr.cpp  SNLTruthTableTree.cpp  SNLTruthTableTree.h  Tree2BoolExpr.cpp  Tree2BoolExpr.h  TruthTableToBoolExpr.cpp  TruthTableToBoolExpr.h
src/formal/: BoolExpr.cpp  BoolExpr.h  BoolExprCache.cpp  BoolExprCache.h  CMakeLists.txt  CompressedBoolExpr.cpp  CompressedBoolExpr.h  SimpleSatSolver.cpp  SimpleSatSolver.h
src/strategies/: CMakeLists.txt
src/strategies/miter/: BuildPrimaryOutputClauses.cpp  BuildPrimaryOutputClauses.h  MiterStrategy.cpp  MiterStrategy.h
src/utils/: CMakeLists.txt  SNLLogicCone.cpp  SNLLogicCone.h
test/: CMakeLists.txt
test/strategies/: CMakeLists.txt
test/strategies/miter/: CMakeLists.txt  MiterTests.cpp
test/utils/: CMakeLists.txt  SNLTruthTableTreeTests.cpp
